--- a/.github/workflows/build-release-subcollector.yml
+++ b/.github/workflows/build-release-subcollector.yml
@@ -9,8 +9,10 @@ permissions:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -22,17 +24,27 @@ jobs:
 
       - name: Build subcollector binary
         run: |
-          go build -o subcollector ./cmd/subcollector
+          mkdir -p dist
+
+          if [[ "${{ runner.os }}" == "Windows" ]]; then
+            BINARY_NAME="subcollector-windows-amd64.exe"
+          elif [[ "${{ runner.os }}" == "macOS" ]]; then
+            BINARY_NAME="subcollector-darwin-amd64"
+          else
+            BINARY_NAME="subcollector-linux-amd64"
+          fi
+
+          go build -o dist/$BINARY_NAME ./cmd/subcollector
 
       - name: List files for debugging
-        run: ls -la
+        run: ls -la dist
 
       - name: Upload subcollector binary to release
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./cmd/subcollector
-          asset_name: subcollector
+          asset_path: dist/$BINARY_NAME
+          asset_name: $BINARY_NAME
           asset_content_type: application/octet-stream
         env:
           GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
