--- a/.github/workflows/build-release-subcollector.yml
+++ b/.github/workflows/build-release-subcollector.yml
@@ -23,6 +23,7 @@ jobs:
           go-version: '1.21'
 
       - name: Build subcollector binary
+        shell: bash
         run: |
           mkdir -p dist
 
