--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: Release subcollector
 
 on:
   release:
-    types: [published]
+    types: [created, published]
 
 permissions:
   contents: write
@@ -13,6 +13,11 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
+        arch: [amd64, arm64]
+        exclude:
+          # Exclude arm64 on Windows karena kurang umum digunakan
+          - os: windows-latest
+            arch: arm64
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -22,34 +27,35 @@ jobs:
         with:
           go-version: '1.21'
 
-      - name: Determine binary name
+      - name: Determine binary name and setup GOARCH
         id: set-binary-name
         shell: bash
         run: |
+          # Set GOARCH environment variable
+          echo "GOARCH=${{ matrix.arch }}" >> $GITHUB_ENV
+          
+          # Determine binary name based on OS and architecture
           if [[ "${{ runner.os }}" == "Windows" ]]; then
-            echo "BINARY_NAME=subcollector-windows-amd64.exe" >> $GITHUB_ENV
+            echo "BINARY_NAME=subcollector-windows-${{ matrix.arch }}.exe" >> $GITHUB_ENV
           elif [[ "${{ runner.os }}" == "macOS" ]]; then
-            echo "BINARY_NAME=subcollector-darwin-amd64" >> $GITHUB_ENV
+            echo "BINARY_NAME=subcollector-darwin-${{ matrix.arch }}" >> $GITHUB_ENV
           else
-            echo "BINARY_NAME=subcollector-linux-amd64" >> $GITHUB_ENV
+            echo "BINARY_NAME=subcollector-linux-${{ matrix.arch }}" >> $GITHUB_ENV
           fi
 
       - name: Build subcollector binary
         shell: bash
         run: |
           mkdir -p dist
-          go build -o dist/$BINARY_NAME ./cmd/subcollector
+          go build -o dist/$BINARY_NAME .
 
       - name: List files for debugging
         shell: bash
         run: ls -la dist
 
       - name: Upload subcollector binary to release
-        uses: actions/upload-release-asset@v1
+        uses: softprops/action-gh-release@v1
         with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: dist/${{ env.BINARY_NAME }}
-          asset_name: ${{ env.BINARY_NAME }}
-          asset_content_type: application/octet-stream
+          files: dist/${{ env.BINARY_NAME }}
         env:
-          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
